# py_to_docx

./: .gitignore  py_to_docx.py  pyproject.toml
output/: template.docx  test.docx
