[tool.poetry]
name = "py-to-docx"
version = "0.1.0"
description = ""
authors = ["Oleksandr Kondratiuk <alex_kondr@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "py_to_docx"}]

[tool.poetry.dependencies]
python = "^3.10"
python-docx = "^0.8.11"
docxtpl = "^0.16.6"
py2exe = { version = "^0.13.0.0", python = ">=3.10,<3.11" }
auto-py-to-exe = { version = "^2.34.0", python = ">=3.10,<3.12" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
